# finefab-shared

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
python/finefab_shared/models/: __init__.py
schemas/: browser_scrape.schema.json
scripts/: generate_types.py
tests/: conftest.py  test_schema_models.py
typescript/src/types/: index.ts
